# devoteam_infrastructure_optimizer

./: .env.example  .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main_infrastructure-optimizer.yml
analysis/: codes.py  filters.py  serializers.py  services.py  swagger.py  tests.py  urls.py  views.py
analysis/services/: __init__.py  services.py
analysis/services/classic/: __init__.py  detector.py
analysis/services/llm/: __init__.py  detector.py  engine.py  prompts.py
frontend/: apps.py  urls.py  views.py
infrastructure_optimization/: asgi.py  settings.py  urls.py  wsgi.py
infrastructure_optimization/core/services/: __init__.py  azure_openai.py
ingestion/: codes.py  filters.py  models.py  serializers.py  services.py  swagger.py  urls.py  views.py
recommendations/: codes.py  filters.py  models.py  serializers.py  services.py  swagger.py  tests.py  urls.py  views.py
recommendations/services/: __init__.py  services.py
recommendations/services/classic/: __init__.py  generator.py
recommendations/services/llm/: __init__.py  engine.py  generator.py  prompts.py
sample_data/: batch_metrics.json  single_metric.json
static/: .gitkeep
templates/frontend/: modern_dashboard.html
